--- a/public/styles.css
+++ b/public/styles.css
@@ -34,9 +34,46 @@ body {
   z-index: 1000;
 }
 
-#lobby select,
+#selectionRow {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+#nationColumn, #tankColumn, #ammoColumn {
+  flex: 1;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+#nationColumn img, #tankColumn img {
+  width: 100%;
+  cursor: pointer;
+  margin-bottom: 5px;
+  border: 2px solid transparent;
+}
+
+#nationColumn img.selected, #tankColumn img.selected {
+  border-color: #fff;
+}
+
+#ammoColumn .ammo-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+#ammoColumn img {
+  width: 40px;
+  margin-right: 5px;
+}
+
+#ammoColumn input[type=range] {
+  width: 100px;
+}
+
 #lobby button {
-  margin: 5px;
+  margin-top: 5px;
 }
 
 #lobbyError {
